adding delete artist route
